[gd_scene load_steps=2 format=2]

[ext_resource path="res://Panels/Instantiables/AvailableJobPanel.gd" type="Script" id=1]

[node name="AvailableJobPanel" type="PanelContainer"]
margin_right = 386.0
margin_bottom = 72.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 379.0
margin_bottom = 89.0

[node name="HBC1" type="HBoxContainer" parent="VBC"]
margin_right = 372.0
margin_bottom = 14.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="VBC/HBC1"]
margin_right = 184.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Buy a balloon"
autowrap = true

[node name="CostLabel" type="Label" parent="VBC/HBC1"]
margin_left = 188.0
margin_right = 372.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "Costs $1.00 and 1 balloon"
align = 2

[node name="RewardLabel" type="Label" parent="VBC"]
margin_top = 18.0
margin_right = 372.0
margin_bottom = 32.0
text = "+$1.00 and +3 balloons every 7.0s"
align = 1

[node name="BuyButton" type="Button" parent="VBC"]
margin_left = 154.0
margin_top = 36.0
margin_right = 218.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "Start Job"

[node name="HS" type="HSeparator" parent="VBC"]
margin_top = 60.0
margin_right = 372.0
margin_bottom = 64.0
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="VBC"]
margin_top = 68.0
margin_right = 372.0
margin_bottom = 82.0
text = "Job Description"
autowrap = true
[connection signal="mouse_entered" from="." to="." method="_on_AvailableJobPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AvailableJobPanel_mouse_exited"]
[connection signal="pressed" from="VBC/BuyButton" to="." method="_on_BuyButton_pressed"]
